# vcpkgexample

./: CMakeLists.txt  README.md  bootstrap.bat  build.bat  clean.bat  vcpkg.json
src/: CMakeLists.txt  main.cpp
